--- a/chaser-admin-web/src/styles/index.scss
+++ b/chaser-admin-web/src/styles/index.scss
@@ -130,7 +130,7 @@ aside {
 }
 
 .pagination-container {
-  //margin-top: 30px;
+  margin-top: 30px;
 }
 
 .text-center {
@@ -178,7 +178,6 @@ aside {
     display: inline-block;
     vertical-align: middle;
     margin-bottom: 10px;
-    margin-right: 5px;
   }
 }
 
